--- a/ui/src/Home/Home.css
+++ b/ui/src/Home/Home.css
@@ -3,6 +3,36 @@
 .statboard{
  background-color: rgb(60, 55, 66);
 }
+ul{
+  list-style: none;
+  
+}
+li{
+  margin-top: 15px;
+  width: 200px;
+  text-align: justify;
+  
+}
+.card-li:hover{
+  background-color: #f9f6f6;
+  color: black;
+  cursor: pointer;
+}
+.card-li{
+  padding: 5px;
+  background-color: black;
+  color: white;
+  
+}
+.img{
+  cursor: pointer;
+}
+.logout{
+  cursor: pointer;
+}
+.column2{
+  background-color: aliceblue;
+}
 /*  */
 /* table */
 table {
@@ -21,3 +51,32 @@ table {
     background-color: #f9f6f6;
   }
   /* .... */
+
+ /* Regular styles */
+.chart {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 4px;
+}
+
+
+/* Tablet styles */
+@media only screen and (max-width: 768px) {
+  .chart {
+    flex-direction: column; /* Stack the charts vertically on smaller screens */
+  }
+  .card {
+    width: 80vw; /* Adjust the width for better fit on smaller screens */
+  }
+  .table{
+    flex-direction: column;
+  }
+}
+
+/* Mobile styles */
+@media only screen and (max-width: 480px) {
+  .card {
+    width: 90vw; /* Adjust the width for better fit on even smaller screens */
+  }
+}
